# rin

./: .gitignore  CMakeLists.txt  README.md  build.py  conanfile.py  flake.nix
cli/: CMakeLists.txt  default.nix
cli/ext/argparse/include/argparse/: argparse.hpp
cli/src/: args.hpp  config.cpp  config.hpp  main.cpp
gui/: CMakeLists.txt  default.nix
gui/src/: main.cpp  rin.hpp  window.cpp  window.hpp
gui/src/model/: common.cpp  common.hpp  datamanager.cpp  datamanager.hpp  entity.hpp  entitymodel.cpp  entitymodel.hpp  historymanager.cpp  historymanager.hpp  thumbnailmanager.cpp  thumbnailmanager.hpp  tree.cpp  tree.hpp
gui/src/tagger/: tag_panel.cpp  tag_panel.hpp  tagger.cpp  tagger.hpp
gui/src/utility/: bsp.hpp  painting.hpp  sizing.hpp
gui/src/view/: delegate.cpp  delegate.hpp  view.cpp  view.hpp
gui/src/view/impl/: core.cc  iconmode.cc  listmode.cc  viewitem.cc
gui/src/widgets/: details_panel.cpp  details_panel.hpp  iconsizer.cpp  iconsizer.hpp  navigationpanel.cpp  navigationpanel.hpp  panel.cpp  panel.hpp  resizing_textedit.cpp  resizing_textedit.hpp  tag_listing.cpp  tag_listing.hpp
gui/src/widgets/dialogs/: domain.cpp  domain.hpp  settings.cpp  settings.hpp  sidecar.cpp  sidecar.hpp
lib/: CMakeLists.txt  CMakePresets.json  default.nix
lib/cmake/: Findbotan.cmake  suzuri-config.cmake.in
lib/ext/ToruNiina/toml11/include/: toml.hpp
lib/src/suzuri/: basic_vectors.hpp  exception.hpp  result.hpp  sz_export.hpp  types.hpp
lib/src/suzuri/entity/: common.cpp  common.hpp  database.cpp  database.hpp  entity.hpp  registry.cpp  registry.hpp
lib/src/suzuri/metadata/: tags.cpp  tags.hpp
lib/src/suzuri/sqlite/: common.hpp  database.cpp  database.hpp  query.cpp  query.hpp
lib/src/suzuri/utility/: config_utils.cpp  config_utils.hpp  domain.cpp  domain.hpp  files.cpp  files.hpp  hash.cpp  hash.hpp  json.cpp  json.hpp  string.cpp  string.hpp
